# TP-Final-Counter2D

./: .gitignore  CMakeLists.txt  EventReceiver.cpp  EventReceiver.h  GameManager.cpp  GameManager.h  Makefile  Player.cpp  Player.h  README.md  World.cpp  World.h  install.sh  main  main-2.cpp  main.cpp  mapa.yaml  sdl_renderer.cpp  sdl_texture.cpp  sdl_texture.h  sdl_window.cpp
Character/: animation.cpp  animation.h  camera.cpp  camera.h  character.cpp  character.h  cursor.cpp  cursor.h  stencil.h
Client_src/: Makefile  client.cpp  client.h  main.cpp
Events/: event_manager.h  game_math.h
Sdl/: Makefile  README.md  animation.cpp  animation.h  background.cpp  background.h  button.cpp  camera.cpp  camera.h  character.cpp  character.h  cursor.cpp  cursor.h  dot.cpp  dot.h  draggable.cpp  draggable.h  event_manager.cpp  event_manager.h  floor.cpp  floor.h  game_math.cpp  game_math.h  game_object.cpp  game_object.h  main  main-2.cpp  main.cpp  sdl_mixer.cpp  sdl_mixer.h  sdl_renderer.cpp  sdl_renderer.h  sdl_texture.cpp  sdl_texture.h  sdl_tile.cpp  sdl_tile.h  sdl_window.cpp  sdl_window.h  stencil.cpp  stencil.h  (+2 more)
client_src/: Game.h  GameManager.cpp  GameManager.h  GameViewer.cpp  GameViewer.h  IpMenu.cpp  LevelInfo.h  LoadingMenu.cpp  LoadingMenu.h  Makefile  Menu.cpp  Menu.h  SoundEffects.cpp  SoundEffects.h  TextureManager.cpp  TextureManager.h  client.cpp  client.h  levelInfo.h  main  main.cpp
common/: Direction.h  Event.h  GeneralException.cpp  MapInfo.h  ModelInfo.h  Protocol.cpp  Protocol.h  Socket.cpp  Socket.h  SocketClosedException.cpp  Stopwatch.cpp  Stopwatch.h  Thread.h
common_src/: Camera.cpp  Camera.h  Colors.h  Event.h  GameInfo.h  GameList.h  GameObjectFactory.cpp  GameObjectFactory.h  MapInfo.h  ModelInfo.h  Protocol.cpp  Protocol.h  ServerMessage.h  Socket.cpp  SocketClosedException.h  Stopwatch.cpp  TextureMap.cpp  TextureMap.h  TextureMap.yaml  Thread.cpp  Utils.h  WeaponType.h  WeaponUtils.h  texture_map.cpp  texture_map.h
draggable/: Makefile  draggable.h  main
editor_src/: InitialMenu.cpp  InitialMenu.h  InitialMenue.cpp  InitialMenue.h  Makefile  MenuManager.cpp  MenuManager.h  MenueManager.cpp  MenueManager.h  OptionsMenu.cpp  OptionsMenu.h  OptionsMenue.cpp  OptionsMenue.h  TextureFactory.cpp  TextureFactory.h  TextureMap.cpp  TextureMap.h  editor.cpp  editor.h  macros.h  main  main.cpp  menue.cpp  menue.h  presenter.cpp  presenter.h  quitMenu.cpp  quitMenu.h  quitMenue.cpp  quitMenue.h  textureScreen.cpp  textureScreen.h  textures.yaml
game_model/: Player.cpp  Player.h  Weapon.cpp  Weapon.h  Weaponh.txt  World.cpp  World.h  test
informe/: DocumentaciónTécnica.md  ManualDeProyecto.md  (+2 more)
(+264 files in other folders)
